--- a/Jeux/pong/Pong.vcxproj.filters
+++ b/Jeux/pong/Pong.vcxproj.filters
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Pong.ino" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.Pong.vsarduino.h">
@@ -39,6 +40,12 @@
     <ClInclude Include="object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="racket_player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="racket_IA.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="racket.cpp">
@@ -51,6 +58,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="racket_player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="racket_IA.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
