--- a/lib_inconsolable/pc/.vscode/settings.json
+++ b/lib_inconsolable/pc/.vscode/settings.json
@@ -30,6 +30,12 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "cmath": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "fstream": "cpp",
+        "numeric": "cpp",
+        "sstream": "cpp"
     }
 }
