--- a/lib_inconsolable/make/Makefile.pc
+++ b/lib_inconsolable/make/Makefile.pc
@@ -1,4 +1,4 @@
-CXXC=g++ -g -fsanitize=address
+CXXC=g++ -g #-fsanitize=address
 CXXFLAGS= -std=c++14 -W -Wall -Wextra -Werror -Wfatal-errors #-Weffc++
 LDFLAGS= -lallegro -lallegro_primitives -lallegro_ttf -lallegro_font
 EXEC=main
